# sonytvairplay

./: LICENSE  README.md  gradle.properties  keystore.properties.example  settings.gradle
.github/workflows/: android-apk.yml  android.yml  build_apk.yml  build_pipeline.yml  release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_alac.c
app/src/main/java/com/sonyairplay/receiver/: AudioPlayer.kt  FFmpegAlacDecoder.kt  H264Decoder.kt  MainActivity.kt  MdnsAdvertiser.kt  MirroringServer.kt  NativeAlac.kt  PairingManager.kt  PlayerManager.kt  RAOPServer.kt  RAOPServerOptimized.kt  RtcpManager.kt  SimpleHttpServer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
